# SP-navigate

./: .gitignore  ALGORITHM_PLAN.md  DEVELOPMENT.md  FINAL_CLUSTERING_REPORT.md  J_STYLE_IMPROVEMENT_REPORT.md  QUICKSTART.md  README.md  REGION_GROWING_TEST_REPORT.md  USAGE_GUIDE.md  address_validate.py  analyze_points.py  app.py  gen_fix_excel.py  gen_overview_map.py  gen_report_doc.py  gen_route_images.py  gen_sampling_report.py  poi_search.py  postion.xls  pyproject.toml  requirements.txt  revalidate.py  route_map.html  route_optimizer.py  route_planner.py  run_centroid_final.py  run_cluster_pointmap.py  run_compare_cluster.py  run_web.sh  test_clustering_comparison.py  test_coordinate_flow.py  test_final_clustering.py  test_final_max6.py  test_j_style_comparison.py  test_j_style_improved.py  test_max6_clustering.py  test_practical_clustering.py  test_region_growing.py  validate_report.txt  validate_result.json  (+25 more)
presets/overnight_sampling/: config.yaml
presets/water_sampling/: config.yaml
route_images/html/: 第10天导航轨迹图.html  第11天导航轨迹图.html  第12天导航轨迹图.html  第13天导航轨迹图.html  第14天导航轨迹图.html  第15天导航轨迹图.html  第16天导航轨迹图.html  第17天导航轨迹图.html  第1天导航轨迹图.html  第2天导航轨迹图.html  第3天导航轨迹图.html  第4天导航轨迹图.html  第5天导航轨迹图.html  第6天导航轨迹图.html  第7天导航轨迹图.html  第8天导航轨迹图.html  第9天导航轨迹图.html
route_system/: __init__.py  __main__.py  amap_api.py  config.py  data_loader.py  image_gen.py  main.py  report_gen.py
route_system/output/: compare_result.json
route_system/strategies/: __init__.py  base.py  cluster.py  tsp.py
src/navigate/: __init__.py  __main__.py  cli.py
(+111 files in other folders)
